UKI-648 Fixed dropdown overlap issue in PT data entry

--- a/frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/index.scss
+++ b/frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/index.scss
@@ -541,3 +541,8 @@ div[class^="MuiPaper-root"],
    overflow: auto !important;
  }
 }
+
+
+.ownershipType .dropdown, #constructiontype { 
+  z-index:1000;
+}
